--- a/resume.html
+++ b/resume.html
@@ -127,30 +127,31 @@
         }
 
         .styled-button {
-            font-family: var(--cp-font-family);
-            -webkit-appearance: none;
-            display: inline-flex;
-            align-items: center;
-            vertical-align: middle;
-            position: relative;
-            font-family: inherit;
-            font-size: 1rem;
-            text-shadow: none;
-            line-height: 1.2;
-            white-space: nowrap;
-            text-overflow: ellipsis;
-            text-decoration: none !important;
-            font-weight: 400 !important;
-            cursor: pointer;
-            background: #76E1E5;
-            color: #000;
-            padding: 10px 20px;
-            margin: 10px 0;
-            border-radius: 10px;
-            border: none;
-            text-align: center;
-            justify-content: center;
-            top: 10%;
+           font-family: 'Open Sans', sans-serif;
+-webkit-appearance: none;
+display: inline-flex;
+align-items: center;
+vertical-align: middle;
+position: relative;
+font-size: 14px;
+text-shadow: none;
+line-height: 1.2;
+white-space: nowrap;
+text-overflow: ellipsis;
+text-decoration: none !important;
+font-weight: 400 !important;
+cursor: pointer;
+background: #f8c106;
+color: #320882;
+padding: 10px 20px;
+margin: 10px 0;
+border-radius: 10px;
+border: none;
+text-align: center;
+justify-content: center;
+top: 10%;
+left: -5%;
+
         }
     </style>
     <script>
