--- a/index.html
+++ b/index.html
@@ -52,8 +52,7 @@
             display: flex;
             align-items: center;
         }
-    </style>
-</head>
+    </style></head>
 
 <body>
 <div id="main">
@@ -63,8 +62,8 @@
         </div>
 
         <ul class="menu">
-            <li id="home-link"><span><a href="/index.html">Home</a></span></li>
-            <li><span data-href="#about-us">About Us</span></li>
+            <!--<li id="home-link"><span><a href="/index.html">Home</a></span></li>-->
+            <li><span data-href="#about-us">Home</span></li>
             <li><span data-href="#services">Services</span></li>
             <li><span data-href="#why-us">Why Us</span></li>
             <li><span data-href="#faq">FAQ</span></li>
