download from server

--- a/resume.html
+++ b/resume.html
@@ -211,11 +211,10 @@ left: -5%;
         <div class="page"><img src="1.svg" width="400px" height="600px" alt=""></div>
         <div class="page"><img src="2.png" width="400px" height="600px" alt=""></div>
         <div class="page"><img src="3.svg" width="400px" height="600px" alt=""></div>
-        <div class="page"><img src="4.svg" width="400px" height="600px" alt=""></div>
         <div class="page"><img src="5.svg" width="400px" height="600px" alt=""></div>
-        <div class="page"><img class="hover-glow" src="6.svg" width="400px" height="600px" alt="" usemap="#imgmap6svg">
+        <div class="page"><img src="6.jpg" width="400px" height="600px" alt="" usemap="#imgmap6svg">
             <map id="imgmap6svg" name="imgmap6svg">
-                <area shape="rect" alt="" title="" coords="25,61,747,116" href="javascript:void(0)" onclick="openInPopup('https://www.agencypt.com')" />
+                <area shape="rect" alt="" title="" coords="25,61,747,116" href="javascript:void(0)" onclick="openInPopup('https://www.agencypt.com/demo.html')" />
             </map>
         </div>
         <div class="page"><img src="7.svg" width="400px" height="600px" alt=""></div>
