added sub menus

--- a/index.html
+++ b/index.html
@@ -68,7 +68,13 @@
             <li><span data-href="#why-us">Why Us</span></li>
             <li><span data-href="#faq">FAQ</span></li>
             <li><span data-href="#contact">Contact<span class="hide-320">&nbsp;Us</span></span></li>
-            <li id="demo-link"><span><a href="/demo.html">Demo</a></span></li>
+            <li id="demo-link">
+                <span><a href="#" onclick="return false;">Demo</a></span>
+                <ul>
+                    <li><span><a href="/demo.html">3D</a></span></li>
+                    <li><span><a href="/web.html">Websites</a></span></li>
+                </ul>
+            </li>
             <li class="slider"></li>
         </ul>
     </header>
